Fix preloader auto-hide after 3 seconds

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="preloader">
         <div class="loader-content">
             <div class="loader-spinner"></div>
-            <h2>Büyüksofulu</h2>
+            <h2>Büyüksofulu'ya Giriş yapıyorsunuz</h2>
             <p>Aladağ'ın Kalbi</p>
         </div>
     </div>
