Fix about section image

--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
             <div class="about-layout">
                 <div class="about-images">
                     <div class="about-main-img">
-                        <img src="https://lh3.googleusercontent.com/p/AF1QipP2xGqJsD_wZ5pKj0CzF6lNwDhfXG2m3bPnZxTM=s1360-w1360-h1020"
-                            alt="Büyüksofulu Köyü" onerror="this.src='https://ibb.co/vFKXWy2'">
+                        <img src="https://d.koylerim.com/gallery/9_1.jpg" alt="Büyüksofulu Köyü"
+                            onerror="this.src='https://images.unsplash.com/photo-1500382017468-9049fed747ef?w=800'">
                     </div>
                     <div class="about-badge">
                         <span class="badge-year">1928</span>
