Video tabs ve filtreleme eklendi

--- a/index.html
+++ b/index.html
@@ -322,6 +322,13 @@
                 <p style="color: var(--light-400);">Büyüksofulu ve Eğni Yaylası'ndan video içerikler</p>
             </div>
 
+            <div class="video-tabs">
+                <button class="video-tab-btn active" data-filter="all">Tümü</button>
+                <button class="video-tab-btn" data-filter="koy">Köy Videoları</button>
+                <button class="video-tab-btn" data-filter="egni">Eğni Yaylası</button>
+                <button class="video-tab-btn" data-filter="doga">Doğa</button>
+            </div>
+
             <div class="video-grid" id="video-grid"></div>
 
             <div class="video-cta">
