Tum gorseller gercek koy fotograflariyla degistirildi ve preloader hatasi giderildi

--- a/index.html
+++ b/index.html
@@ -235,8 +235,7 @@
     <!-- Egni Yaylası Section -->
     <section id="egni" class="egni section-dark">
         <div class="egni-bg">
-            <img src="https://lh3.googleusercontent.com/p/AF1QipNE5V0c0mHqkXr8A-qC4nY0Pj8D0k7n0Y0_5c0d=s1360-w1360-h1020"
-                alt="Eğni Yaylası"
+            <img src="https://d.koylerim.com/gallery/9_20.jpg" alt="Eğni Yaylası"
                 onerror="this.src='https://images.unsplash.com/photo-1469474968028-56623f02e42e?w=1920'">
         </div>
         <div class="container">
