Layout duzeltmeleri: Ticker ve Navbar konumlandirmasi fixlendi, Weather widget tasindi

--- a/index.html
+++ b/index.html
@@ -31,40 +31,6 @@
         </div>
     </div>
 
-    <!-- Navigation -->
-    <nav id="navbar" class="navbar">
-        <div class="nav-container">
-            <div class="nav-logo">
-                <i class="fas fa-mountain"></i>
-                <span>Büyüksofulu</span>
-                <div class="weather-widget" id="weather-widget">
-                    <i class="fas fa-sun"></i>
-                    <span>22°C</span>
-                </div>
-            </div>
-
-            <div class="nav-links">
-                <a href="#home" class="active">Ana Sayfa</a>
-                <a href="#about">Hakkında</a>
-                <a href="#egni">Eğni Yaylası</a>
-                <a href="#gallery">Galeri</a>
-                <a href="#videos">Videolar</a>
-                <a href="#activities">Aktiviteler</a>
-                <a href="#contact">İletişim</a>
-            </div>
-
-            <div class="nav-actions">
-                <button class="icon-btn" id="theme-toggle"><i class="fas fa-moon"></i></button>
-                <button class="btn-login" id="login-btn"><i class="fas fa-user"></i> <span>Giriş</span></button>
-                <div class="mobile-toggle" id="mobile-toggle">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </div>
-            </div>
-        </div>
-    </nav>
-
     <!-- News Ticker -->
     <div class="news-ticker">
         <div class="ticker-title"><i class="fas fa-bullhorn"></i> DUYURULAR</div>
@@ -75,6 +41,45 @@
             <div class="ticker-item">🌲 Eğni Yaylası doğa yürüyüşü etkinliğine tüm halkımız davetlidir.</div>
         </div>
     </div>
+
+    <!-- Navigation -->
+    <nav id="navbar" class="navbar">
+        <div class="nav-container">
+            <div class="nav-brand">
+                <div class="brand-icon">
+                    <i class="fas fa-mountain"></i>
+                </div>
+                <div class="brand-text">
+                    <span class="brand-name">Büyüksofulu</span>
+                    <span class="brand-sub">Aladağ'ın İncisi</span>
+                </div>
+            </div>
+
+            <div class="nav-menu" id="nav-menu">
+                <a href="#home" class="nav-link active">Ana Sayfa</a>
+                <a href="#about" class="nav-link">Hakkında</a>
+                <a href="#egni" class="nav-link">Eğni Yaylası</a>
+                <a href="#gallery" class="nav-link">Galeri</a>
+                <a href="#videos" class="nav-link">Videolar</a>
+                <a href="#activities" class="nav-link">Aktiviteler</a>
+                <a href="#contact" class="nav-link">İletişim</a>
+            </div>
+
+            <div class="nav-right">
+                <div class="weather-widget" id="weather-widget">
+                    <i class="fas fa-sun"></i>
+                    <span>22°C</span>
+                </div>
+                <button class="theme-btn" id="theme-toggle"><i class="fas fa-moon"></i></button>
+                <button class="login-btn" id="login-btn"><i class="fas fa-user"></i> <span>Giriş</span></button>
+                <button class="nav-toggle" id="nav-toggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </div>
+        </div>
+    </nav>
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-media">
