Muhtar bolumu eklendi: Durmus Gonul ve iletisim karti

--- a/index.html
+++ b/index.html
@@ -229,6 +229,29 @@
                             <span class="stat-label">Yıllık Tarih</span>
                         </div>
                     </div>
+
+                    <!-- Muhtar Card -->
+                    <div class="muhtar-card glass-dark">
+                        <div class="muhtar-header">
+                            <div class="muhtar-img">
+                                <img src="https://ui-avatars.com/api/?name=Durmuş+Gönül&background=10b981&color=fff&size=128"
+                                    alt="Durmuş Gönül">
+                                <div class="online-badge" title="Hizmetinizde"></div>
+                            </div>
+                            <div class="muhtar-title">
+                                <h4>Durmuş Gönül</h4>
+                                <span>Köy Muhtarı</span>
+                            </div>
+                        </div>
+                        <div class="muhtar-message">
+                            <i class="fas fa-quote-left quote-icon"></i>
+                            <p>Doğasıyla, insanıyla, yaylasıyla Aladağ'ın incisi Büyüksofulu'ya hoş geldiniz. Köyümüzün
+                                kapısı herkese açıktır.</p>
+                        </div>
+                        <div class="muhtar-actions">
+                            <button class="btn-contact-outline"><i class="fas fa-phone"></i> Muhtarı Ara</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
