Kulturumuz bolumu (sozluk & yemekler) ve WhatsApp butonu eklendi

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 </head>
 
 <body>
+    <!-- WhatsApp Button -->
+    <a href="https://wa.me/905051234567" class="whatsapp-float" target="_blank" title="WhatsApp Hattı">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+
     <!-- Cursor Glow -->
     <div class="cursor-glow" id="cursor-glow"></div>
 
@@ -250,6 +255,67 @@
                         </div>
                         <div class="muhtar-actions">
                             <button class="btn-contact-outline"><i class="fas fa-phone"></i> Muhtarı Ara</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Culture Section -->
+    <section id="culture" class="section-alt">
+        <div class="container">
+            <div class="section-header center">
+                <div class="section-tag"><i class="fas fa-utensils"></i> Kültürümüz</div>
+                <h2 class="section-title">Yöresel <span class="gradient-text">Lezzetler & Sözler</span></h2>
+                <p>Büyüksofulu'nun tadı damağınızda, sözü aklınızda kalsın</p>
+            </div>
+
+            <div class="culture-grid">
+                <!-- Sozluk -->
+                <div class="culture-card glass">
+                    <h3><i class="fas fa-comment-dots"></i> Yöresel Sözlük</h3>
+                    <div class="dict-list">
+                        <div class="dict-item">
+                            <span class="word">Bibi</span>
+                            <span class="meaning">Hala</span>
+                        </div>
+                        <div class="dict-item">
+                            <span class="word">Cülük</span>
+                            <span class="meaning">Civciv</span>
+                        </div>
+                        <div class="dict-item">
+                            <span class="word">Çimmek</span>
+                            <span class="meaning">Yıkanmak, yüzmek</span>
+                        </div>
+                        <div class="dict-item">
+                            <span class="word">Zahar</span>
+                            <span class="meaning">Herhalde, galiba</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Yemekler -->
+                <div class="culture-card glass">
+                    <h3><i class="fas fa-utensils"></i> Meşhur Lezzetler</h3>
+                    <div class="food-list">
+                        <div class="food-item">
+                            <div class="food-thumb">
+                                <i class="fas fa-soup"></i>
+                            </div>
+                            <div class="food-info">
+                                <h4>Yüksük Çorbası</h4>
+                                <p>Düğünlerin vazgeçilmezi, mantılı çorba.</p>
+                            </div>
+                        </div>
+                        <div class="food-item">
+                            <div class="food-thumb">
+                                <i class="fas fa-cookie-bite"></i>
+                            </div>
+                            <div class="food-info">
+                                <h4>Köy Kömbesi</h4>
+                                <p>İki sac arasında pişen eşsiz lezzet.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -705,7 +771,7 @@
                             <div class="cc-icon"><i class="fas fa-phone"></i></div>
                             <div>
                                 <h4>Muhtarlık</h4>
-                                <p>+90 (322) XXX XX XX</p>
+                                <p>+0 533 371 83 09</p>
                             </div>
                         </div>
                         <div class="cc-item">
